# ontoview

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: SNOMED-CT_release_intro.ipynb  SNOMED_hierarchy_intro.ipynb  create_custom_ontology.ipynb  extra_snomed_clean.ipynb  prepare_custom_ontology.ipynb  prepare_standard_ontologies.ipynb
src/ontoview/: annotators.py  filter_ontology.py  onto.py  vectorizer.py
tests/: test_ontology.py
