[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontoview"
dynamic = ["version"]
description = 'A small set of utilities for interacting with medical ontologies in python'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = []
dependencies = [
  "numpy",
  "pandas",
  "scipy",
]

[project.urls]
Documentation = "https://github.com/high-dimensional/ontoview#readme"
Issues = "https://github.com/high-dimensional/ontoview/issues"
Source = "https://github.com/high-dimensional/ontoview"

[tool.hatch.version]
path = "src/ontoview/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "isort",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
fmt = "black . ; isort . "